@@ -1,5 +1,6 @@
 2003-07-17  Tim Waugh  <twaugh@redhat.com>
-	* src/plugins/Ancestors.py: Include grandchildren's birth dates in
+	* src/plugins/Ancestors.py: Handle unknown genders and missing
+	first names.  Include grandchildren's birth dates in
 	abbreviated form.  Include other names in the notes.  Include
 	birth/marriage/death descriptions.  Change report name.  Include
 	addresses.  Better generation headings.  Include nickname.
